--- a/rokit.toml
+++ b/rokit.toml
@@ -10,3 +10,4 @@ lune = "lune-org/lune@0.10.4"
 StyLua = "JohnnyMorganz/StyLua@2.3.1"
 darklua = "seaofvoices/darklua@0.17.3"
 selene = "Kampfkarren/selene@0.29.0"
+asphalt = "jackTabsCode/asphalt@1.2.0"
