--- a/pesde.toml
+++ b/pesde.toml
@@ -29,6 +29,7 @@ sourcemap_generator = ".pesde/scripts/sourcemap_generator.luau"
 [dev_dependencies]
 scripts = { name = "pesde/scripts_rojo", version = "^0.2.0", target = "lune" }
 rojo = { name = "pesde/rojo", version = "^7.5.1", target = "lune" }
+pathfs = { name = "jiwonz/pathfs", version = "^0.6.0", target = "lune" }
 
 [engines]
 pesde = "^0.7.2"
